fix: Started reviewing oppositions. Added minutes per match for rankings.

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -116,16 +116,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#teams_oppositions = TeamsOpposition(db)\n",
-    "players_oppositions = PlayersOpposition(db)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,12 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "ID_COMP = 'ligue_1'\n",
-    "SEASON = '2023-2024'"
+    "SEASON = '2024-2025'"
    ]
   },
   {
@@ -151,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,12 +150,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#t_oppositions = teams_oppositions.build_oppositions(TEAM)\n",
-    "#t_oppositions"
+    "teams_oppositions = TeamsOpposition(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_oppositions = teams_oppositions.build_oppositions(TEAM)\n",
+    "# TODO insérer paramètre side"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_oppositions"
    ]
   },
   {
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,18 +194,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players_oppositions = PlayersOpposition(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_oppositions = players_oppositions.build_oppositions(PLAYER, ID_COMP, SEASON)\n",
+    "# TODO insérer paramètre side"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: ERREUR:  les valeurs NULL ne peuvent pas être formatés comme un identifiant SQL\n",
-      "CONTEXT:  fonction PL/pgSQL players_oppositions(character varying,character varying,character varying), ligne 6 à affectation\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -224,9 +242,24 @@
        "}\n",
        "</style>\n",
        "<div class=\"itables\">\n",
-       "<table id=\"a0377d76-8577-43bf-be4f-476eddc04ea7\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
+       "<table id=\"50e95f5b-e9ab-4640-8d80-9851719eeccf\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      \n",
+       "      <th>Player</th>\n",
+       "      <th>Opponent</th>\n",
+       "      <th>Matches</th>\n",
+       "      <th>Wins</th>\n",
+       "      <th>Draws</th>\n",
+       "      <th>Loses</th>\n",
+       "      <th>Goals</th>\n",
+       "      <th>Assists</th>\n",
+       "      <th>Minutes</th>\n",
+       "      <th>Minutes/Match</th>\n",
+       "      <th>Shots</th>\n",
+       "      <th>Shots on Target</th>\n",
+       "      <th>Yellow Cards</th>\n",
+       "      <th>Incl. 2 Yellow Cards</th>\n",
+       "      <th>Red Cards</th>\n",
        "    </tr>\n",
        "  </thead><tbody><tr><td>Loading... (need <a href=https://mwouts.github.io/itables/troubleshooting.html>help</a>?)</td></tr></tbody></table>\n",
        "<script>\n",
@@ -234,16 +267,16 @@
        "    // to avoid conflicts between the various tables' data & dt_args\n",
        "    {\n",
        "        // Define the table data\n",
-       "        const data = [];\n",
+       "        const data = [[\"Amine Gouiri\", \"AJ Auxerre\", 1, 0, 0, 1, 0, 0, 45, \"45.00\", 2, 1, 0, 0, 0], [\"Amine Gouiri\", \"Angers SCO\", 1, 1, 0, 0, 0, 0, 14, \"14.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"AS Monaco FC\", 2, 0, 0, 2, 1, 0, 83, \"41.00\", 4, 1, 1, 0, 0], [\"Amine Gouiri\", \"AS Saint-\\u00c9tienne\", 1, 1, 0, 0, 1, 0, 61, \"61.00\", 2, 1, 0, 0, 0], [\"Amine Gouiri\", \"FC Nantes\", 1, 0, 0, 1, 0, 0, 45, \"45.00\", 2, 1, 0, 0, 0], [\"Amine Gouiri\", \"Le Havre AC\", 1, 1, 0, 0, 0, 0, 21, \"21.00\", 1, 0, 0, 0, 0], [\"Amine Gouiri\", \"Lille OSC\", 1, 0, 0, 1, 0, 0, 71, \"71.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"Montpellier HSC\", 1, 1, 0, 0, 0, 0, 23, \"23.00\", 1, 0, 0, 0, 0], [\"Amine Gouiri\", \"OGC Nice\", 1, 0, 0, 1, 0, 0, 45, \"45.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"Olympique de Marseille\", 1, 0, 0, 1, 0, 0, 68, \"68.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"Olympique Lyonnais\", 2, 2, 0, 0, 1, 2, 123, \"61.00\", 10, 6, 0, 0, 0], [\"Amine Gouiri\", \"Paris Saint-Germain FC\", 1, 0, 0, 1, 0, 0, 90, \"90.00\", 1, 1, 0, 0, 0], [\"Amine Gouiri\", \"RC Lens\", 1, 0, 1, 0, 0, 0, 23, \"23.00\", 1, 1, 0, 0, 0], [\"Amine Gouiri\", \"RC Strasbourg Alsace\", 1, 0, 0, 1, 0, 0, 71, \"71.00\", 1, 0, 0, 0, 0], [\"Amine Gouiri\", \"Stade Brestois 29\", 2, 0, 1, 1, 0, 1, 107, \"53.00\", 4, 4, 0, 0, 0], [\"Amine Gouiri\", \"Stade de Reims\", 1, 0, 0, 1, 0, 0, 90, \"90.00\", 3, 1, 0, 0, 0], [\"Amine Gouiri\", \"Toulouse FC\", 1, 0, 0, 1, 0, 0, 90, \"90.00\", 2, 1, 1, 0, 0]];\n",
        "        // Display the table\n",
        "        $(document).ready(function () {\n",
        "            window.dataTablePromise.then(() => {\n",
        "                // Define the dt_args\n",
-       "                let dt_args = {\"order\": [], \"dom\": \"t\"};\n",
+       "                let dt_args = {\"paging\": false, \"order\": []};\n",
        "                dt_args[\"data\"] = data;\n",
        "\n",
        "                \n",
-       "                $('#a0377d76-8577-43bf-be4f-476eddc04ea7').DataTable(dt_args);\n",
+       "                $('#50e95f5b-e9ab-4640-8d80-9851719eeccf').DataTable(dt_args);\n",
        "            });\n",
        "        })\n",
        "    }\n",
@@ -251,19 +284,15 @@
        "</div>\n"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "p_oppositions = players_oppositions.build_oppositions(PLAYER, ID_COMP, SEASON)\n",
-    "p_oppositions"
+    "show(p_oppositions, paging=False)"
    ]
   },
   {
@@ -281,6 +310,15 @@
    "source": [
     "chps = ['all', 'ligue_1', 'la_liga', 'premier_league', 'serie_a', 'fussball_bundesliga']\n",
     "seasons = [\"all\"] + [f\"{season}-{season+1}\" for season in range(datetime.now().year-5, datetime.now().year)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_matrix = players_oppositions.build_matrix('Matches', ID_COMP, SEASON)"
    ]
   },
   {
