evo: validated team_x_teams. Added side parameter, added "against" stats.

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -129,7 +129,8 @@
    "outputs": [],
    "source": [
     "ID_COMP = 'ligue_1'\n",
-    "SEASON = '2024-2025'"
+    "SEASON = '2024-2025'\n",
+    "SIDE = 'both'"
    ]
   },
   {
@@ -141,55 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TEAM = 'Stade Rennais FC'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "teams_oppositions = TeamsOpposition(db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_oppositions = teams_oppositions.build_oppositions(TEAM)\n",
-    "# TODO insérer paramètre side"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_oppositions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Player x Teams"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PLAYER = 'Amine Gouiri'"
+    "TEAM = 'Rennes'"
    ]
   },
   {
@@ -198,22 +155,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players_oppositions = PlayersOpposition(db)"
+    "teams_oppositions = TeamsOpposition(db)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_oppositions = players_oppositions.build_oppositions(PLAYER, ID_COMP, SEASON)\n",
-    "# TODO insérer paramètre side"
+    "t_oppositions = teams_oppositions.build_oppositions(TEAM, ID_COMP, SEASON, SIDE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -242,21 +198,21 @@
        "}\n",
        "</style>\n",
        "<div class=\"itables\">\n",
-       "<table id=\"50e95f5b-e9ab-4640-8d80-9851719eeccf\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
+       "<table id=\"3b03cfa2-3f6e-476a-8011-d5e02f0180fd\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      \n",
-       "      <th>Player</th>\n",
+       "      <th>Team</th>\n",
        "      <th>Opponent</th>\n",
        "      <th>Matches</th>\n",
        "      <th>Wins</th>\n",
        "      <th>Draws</th>\n",
        "      <th>Loses</th>\n",
-       "      <th>Goals</th>\n",
-       "      <th>Assists</th>\n",
-       "      <th>Minutes</th>\n",
-       "      <th>Minutes/Match</th>\n",
-       "      <th>Shots</th>\n",
-       "      <th>Shots on Target</th>\n",
+       "      <th>Goals For</th>\n",
+       "      <th>Goals Against</th>\n",
+       "      <th>Shots For</th>\n",
+       "      <th>Shots on Target For</th>\n",
+       "      <th>Shots Against</th>\n",
+       "      <th>Shots on Target Against</th>\n",
        "      <th>Yellow Cards</th>\n",
        "      <th>Incl. 2 Yellow Cards</th>\n",
        "      <th>Red Cards</th>\n",
@@ -267,7 +223,7 @@
        "    // to avoid conflicts between the various tables' data & dt_args\n",
        "    {\n",
        "        // Define the table data\n",
-       "        const data = [[\"Amine Gouiri\", \"AJ Auxerre\", 1, 0, 0, 1, 0, 0, 45, \"45.00\", 2, 1, 0, 0, 0], [\"Amine Gouiri\", \"Angers SCO\", 1, 1, 0, 0, 0, 0, 14, \"14.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"AS Monaco FC\", 2, 0, 0, 2, 1, 0, 83, \"41.00\", 4, 1, 1, 0, 0], [\"Amine Gouiri\", \"AS Saint-\\u00c9tienne\", 1, 1, 0, 0, 1, 0, 61, \"61.00\", 2, 1, 0, 0, 0], [\"Amine Gouiri\", \"FC Nantes\", 1, 0, 0, 1, 0, 0, 45, \"45.00\", 2, 1, 0, 0, 0], [\"Amine Gouiri\", \"Le Havre AC\", 1, 1, 0, 0, 0, 0, 21, \"21.00\", 1, 0, 0, 0, 0], [\"Amine Gouiri\", \"Lille OSC\", 1, 0, 0, 1, 0, 0, 71, \"71.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"Montpellier HSC\", 1, 1, 0, 0, 0, 0, 23, \"23.00\", 1, 0, 0, 0, 0], [\"Amine Gouiri\", \"OGC Nice\", 1, 0, 0, 1, 0, 0, 45, \"45.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"Olympique de Marseille\", 1, 0, 0, 1, 0, 0, 68, \"68.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"Olympique Lyonnais\", 2, 2, 0, 0, 1, 2, 123, \"61.00\", 10, 6, 0, 0, 0], [\"Amine Gouiri\", \"Paris Saint-Germain FC\", 1, 0, 0, 1, 0, 0, 90, \"90.00\", 1, 1, 0, 0, 0], [\"Amine Gouiri\", \"RC Lens\", 1, 0, 1, 0, 0, 0, 23, \"23.00\", 1, 1, 0, 0, 0], [\"Amine Gouiri\", \"RC Strasbourg Alsace\", 1, 0, 0, 1, 0, 0, 71, \"71.00\", 1, 0, 0, 0, 0], [\"Amine Gouiri\", \"Stade Brestois 29\", 2, 0, 1, 1, 0, 1, 107, \"53.00\", 4, 4, 0, 0, 0], [\"Amine Gouiri\", \"Stade de Reims\", 1, 0, 0, 1, 0, 0, 90, \"90.00\", 3, 1, 0, 0, 0], [\"Amine Gouiri\", \"Toulouse FC\", 1, 0, 0, 1, 0, 0, 90, \"90.00\", 2, 1, 1, 0, 0]];\n",
+       "        const data = [[\"Rennes\", \"AJ Auxerre\", 1, 0, 0, 1, 0, 4, 7, 4, 15, 7, 2, 0, 0], [\"Rennes\", \"Angers SCO\", 1, 1, 0, 0, 2, 0, 7, 4, 3, 0, 3, 0, 0], [\"Rennes\", \"AS Monaco FC\", 2, 0, 0, 2, 3, 5, 28, 8, 25, 11, 5, 0, 0], [\"Rennes\", \"AS Saint-\\u00c9tienne\", 1, 1, 0, 0, 5, 0, 16, 7, 2, 0, 0, 0, 0], [\"Rennes\", \"FC Nantes\", 1, 0, 0, 1, 0, 1, 5, 3, 14, 2, 1, 0, 1], [\"Rennes\", \"Le Havre AC\", 1, 1, 0, 0, 1, 0, 20, 4, 5, 1, 2, 0, 0], [\"Rennes\", \"Lille OSC\", 1, 0, 0, 1, 0, 1, 4, 1, 5, 2, 2, 0, 0], [\"Rennes\", \"Montpellier HSC\", 1, 1, 0, 0, 3, 0, 11, 6, 12, 4, 1, 0, 0], [\"Rennes\", \"OGC Nice\", 1, 0, 0, 1, 2, 3, 10, 5, 9, 6, 3, 0, 0], [\"Rennes\", \"Olympique de Marseille\", 1, 0, 0, 1, 1, 2, 4, 3, 13, 7, 2, 0, 0], [\"Rennes\", \"Olympique Lyonnais\", 1, 1, 0, 0, 3, 0, 22, 8, 15, 1, 2, 0, 0], [\"Rennes\", \"Paris Saint-Germain FC\", 1, 0, 0, 1, 1, 3, 11, 4, 23, 7, 3, 0, 0], [\"Rennes\", \"RC Lens\", 1, 0, 1, 0, 1, 1, 10, 5, 10, 2, 2, 0, 0], [\"Rennes\", \"RC Strasbourg Alsace\", 2, 1, 0, 1, 2, 3, 27, 8, 18, 8, 7, 0, 0], [\"Rennes\", \"Stade Brestois 29\", 2, 0, 1, 1, 2, 3, 28, 13, 21, 4, 4, 0, 0], [\"Rennes\", \"Stade de Reims\", 1, 0, 0, 1, 1, 2, 13, 5, 11, 7, 1, 0, 0], [\"Rennes\", \"Toulouse FC\", 1, 0, 0, 1, 0, 2, 7, 1, 9, 2, 3, 0, 0]];\n",
        "        // Display the table\n",
        "        $(document).ready(function () {\n",
        "            window.dataTablePromise.then(() => {\n",
@@ -276,7 +232,7 @@
        "                dt_args[\"data\"] = data;\n",
        "\n",
        "                \n",
-       "                $('#50e95f5b-e9ab-4640-8d80-9851719eeccf').DataTable(dt_args);\n",
+       "                $('#3b03cfa2-3f6e-476a-8011-d5e02f0180fd').DataTable(dt_args);\n",
        "            });\n",
        "        })\n",
        "    }\n",
@@ -291,6 +247,50 @@
      "output_type": "display_data"
     }
    ],
+   "source": [
+    "show(t_oppositions, paging=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Player x Teams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PLAYER = 'Amine Gouiri'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players_oppositions = PlayersOpposition(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_oppositions = players_oppositions.build_oppositions(PLAYER, ID_COMP, SEASON)\n",
+    "# TODO insérer paramètre side"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "show(p_oppositions, paging=False)"
    ]
