evo: validated playe_x_teams. added side parameter.

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "}\n",
        "</style>\n",
        "<div class=\"itables\">\n",
-       "<table id=\"3b03cfa2-3f6e-476a-8011-d5e02f0180fd\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
+       "<table id=\"005e07aa-1c49-4f9e-a0ab-3e7f558cbf26\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      \n",
        "      <th>Team</th>\n",
@@ -232,7 +232,7 @@
        "                dt_args[\"data\"] = data;\n",
        "\n",
        "                \n",
-       "                $('#3b03cfa2-3f6e-476a-8011-d5e02f0180fd').DataTable(dt_args);\n",
+       "                $('#005e07aa-1c49-4f9e-a0ab-3e7f558cbf26').DataTable(dt_args);\n",
        "            });\n",
        "        })\n",
        "    }\n",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,19 +278,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_oppositions = players_oppositions.build_oppositions(PLAYER, ID_COMP, SEASON)\n",
-    "# TODO insérer paramètre side"
+    "p_oppositions = players_oppositions.build_oppositions(PLAYER, ID_COMP, SEASON, \"home\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.itables table td {\n",
+       "    text-overflow: ellipsis;\n",
+       "    overflow: hidden;\n",
+       "}\n",
+       "\n",
+       ".itables table th {\n",
+       "    text-overflow: ellipsis;\n",
+       "    overflow: hidden;\n",
+       "}\n",
+       "\n",
+       ".itables thead input {\n",
+       "    width: 100%;\n",
+       "    padding: 3px;\n",
+       "    box-sizing: border-box;\n",
+       "}\n",
+       "\n",
+       ".itables tfoot input {\n",
+       "    width: 100%;\n",
+       "    padding: 3px;\n",
+       "    box-sizing: border-box;\n",
+       "}\n",
+       "</style>\n",
+       "<div class=\"itables\">\n",
+       "<table id=\"eeb7e34d-8810-4a47-bfac-475cf879858e\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      \n",
+       "      <th>Player</th>\n",
+       "      <th>Opponent</th>\n",
+       "      <th>Matches</th>\n",
+       "      <th>Wins</th>\n",
+       "      <th>Draws</th>\n",
+       "      <th>Loses</th>\n",
+       "      <th>Goals</th>\n",
+       "      <th>Assists</th>\n",
+       "      <th>Minutes</th>\n",
+       "      <th>Minutes/Match</th>\n",
+       "      <th>Shots</th>\n",
+       "      <th>Shots on Target</th>\n",
+       "      <th>Yellow Cards</th>\n",
+       "      <th>Incl. 2 Yellow Cards</th>\n",
+       "      <th>Red Cards</th>\n",
+       "    </tr>\n",
+       "  </thead><tbody><tr><td>Loading... (need <a href=https://mwouts.github.io/itables/troubleshooting.html>help</a>?)</td></tr></tbody></table>\n",
+       "<script>\n",
+       "    // We use a namespace per table (= the next curly bracket)\n",
+       "    // to avoid conflicts between the various tables' data & dt_args\n",
+       "    {\n",
+       "        // Define the table data\n",
+       "        const data = [[\"Amine Gouiri\", \"Angers SCO\", 1, 1, 0, 0, 0, 0, 14, \"14.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"AS Monaco FC\", 1, 0, 0, 1, 0, 0, 46, \"46.00\", 2, 0, 0, 0, 0], [\"Amine Gouiri\", \"AS Saint-\\u00c9tienne\", 1, 1, 0, 0, 1, 0, 61, \"61.00\", 2, 1, 0, 0, 0], [\"Amine Gouiri\", \"Le Havre AC\", 1, 1, 0, 0, 0, 0, 21, \"21.00\", 1, 0, 0, 0, 0], [\"Amine Gouiri\", \"Montpellier HSC\", 1, 1, 0, 0, 0, 0, 23, \"23.00\", 1, 0, 0, 0, 0], [\"Amine Gouiri\", \"Olympique de Marseille\", 1, 0, 0, 1, 0, 0, 68, \"68.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"Olympique Lyonnais\", 2, 2, 0, 0, 1, 2, 123, \"61.00\", 10, 6, 0, 0, 0], [\"Amine Gouiri\", \"RC Lens\", 1, 0, 1, 0, 0, 0, 23, \"23.00\", 1, 1, 0, 0, 0], [\"Amine Gouiri\", \"Stade Brestois 29\", 1, 0, 0, 1, 0, 1, 33, \"33.00\", 3, 3, 0, 0, 0], [\"Amine Gouiri\", \"Toulouse FC\", 1, 0, 0, 1, 0, 0, 90, \"90.00\", 2, 1, 1, 0, 0]];\n",
+       "        // Display the table\n",
+       "        $(document).ready(function () {\n",
+       "            window.dataTablePromise.then(() => {\n",
+       "                // Define the dt_args\n",
+       "                let dt_args = {\"paging\": false, \"order\": [], \"dom\": \"t\"};\n",
+       "                dt_args[\"data\"] = data;\n",
+       "\n",
+       "                \n",
+       "                $('#eeb7e34d-8810-4a47-bfac-475cf879858e').DataTable(dt_args);\n",
+       "            });\n",
+       "        })\n",
+       "    }\n",
+       "</script>\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "show(p_oppositions, paging=False)"
    ]
