evo: dwh_utils for functions

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ENV=\"dev\""
+    "ENV=\"prod\""
    ]
   },
   {
@@ -198,7 +198,7 @@
        "}\n",
        "</style>\n",
        "<div class=\"itables\">\n",
-       "<table id=\"005e07aa-1c49-4f9e-a0ab-3e7f558cbf26\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
+       "<table id=\"aeaf5b48-be38-44f1-8327-887fb38341ab\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      \n",
        "      <th>Team</th>\n",
@@ -223,7 +223,7 @@
        "    // to avoid conflicts between the various tables' data & dt_args\n",
        "    {\n",
        "        // Define the table data\n",
-       "        const data = [[\"Rennes\", \"AJ Auxerre\", 1, 0, 0, 1, 0, 4, 7, 4, 15, 7, 2, 0, 0], [\"Rennes\", \"Angers SCO\", 1, 1, 0, 0, 2, 0, 7, 4, 3, 0, 3, 0, 0], [\"Rennes\", \"AS Monaco FC\", 2, 0, 0, 2, 3, 5, 28, 8, 25, 11, 5, 0, 0], [\"Rennes\", \"AS Saint-\\u00c9tienne\", 1, 1, 0, 0, 5, 0, 16, 7, 2, 0, 0, 0, 0], [\"Rennes\", \"FC Nantes\", 1, 0, 0, 1, 0, 1, 5, 3, 14, 2, 1, 0, 1], [\"Rennes\", \"Le Havre AC\", 1, 1, 0, 0, 1, 0, 20, 4, 5, 1, 2, 0, 0], [\"Rennes\", \"Lille OSC\", 1, 0, 0, 1, 0, 1, 4, 1, 5, 2, 2, 0, 0], [\"Rennes\", \"Montpellier HSC\", 1, 1, 0, 0, 3, 0, 11, 6, 12, 4, 1, 0, 0], [\"Rennes\", \"OGC Nice\", 1, 0, 0, 1, 2, 3, 10, 5, 9, 6, 3, 0, 0], [\"Rennes\", \"Olympique de Marseille\", 1, 0, 0, 1, 1, 2, 4, 3, 13, 7, 2, 0, 0], [\"Rennes\", \"Olympique Lyonnais\", 1, 1, 0, 0, 3, 0, 22, 8, 15, 1, 2, 0, 0], [\"Rennes\", \"Paris Saint-Germain FC\", 1, 0, 0, 1, 1, 3, 11, 4, 23, 7, 3, 0, 0], [\"Rennes\", \"RC Lens\", 1, 0, 1, 0, 1, 1, 10, 5, 10, 2, 2, 0, 0], [\"Rennes\", \"RC Strasbourg Alsace\", 2, 1, 0, 1, 2, 3, 27, 8, 18, 8, 7, 0, 0], [\"Rennes\", \"Stade Brestois 29\", 2, 0, 1, 1, 2, 3, 28, 13, 21, 4, 4, 0, 0], [\"Rennes\", \"Stade de Reims\", 1, 0, 0, 1, 1, 2, 13, 5, 11, 7, 1, 0, 0], [\"Rennes\", \"Toulouse FC\", 1, 0, 0, 1, 0, 2, 7, 1, 9, 2, 3, 0, 0]];\n",
+       "        const data = [[\"Rennes\", \"AJ Auxerre\", 1, 0, 0, 1, 0, 4, 7, 4, 15, 7, 2, 0, 0], [\"Rennes\", \"Angers SCO\", 1, 1, 0, 0, 2, 0, 7, 4, 3, 0, 3, 0, 0], [\"Rennes\", \"AS Monaco FC\", 2, 0, 0, 2, 3, 5, 28, 8, 25, 11, 5, 0, 0], [\"Rennes\", \"AS Saint-\\u00c9tienne\", 2, 2, 0, 0, 7, 0, 37, 15, 11, 3, 5, 0, 0], [\"Rennes\", \"FC Nantes\", 1, 0, 0, 1, 0, 1, 5, 3, 14, 2, 1, 0, 1], [\"Rennes\", \"Le Havre AC\", 1, 1, 0, 0, 1, 0, 20, 4, 5, 1, 2, 0, 0], [\"Rennes\", \"Lille OSC\", 1, 0, 0, 1, 0, 1, 4, 1, 5, 2, 2, 0, 0], [\"Rennes\", \"Montpellier HSC\", 1, 1, 0, 0, 3, 0, 11, 6, 12, 4, 1, 0, 0], [\"Rennes\", \"OGC Nice\", 1, 0, 0, 1, 2, 3, 10, 5, 9, 6, 3, 0, 0], [\"Rennes\", \"Olympique de Marseille\", 1, 0, 0, 1, 1, 2, 4, 3, 13, 7, 2, 0, 0], [\"Rennes\", \"Olympique Lyonnais\", 1, 1, 0, 0, 3, 0, 22, 8, 15, 1, 2, 0, 0], [\"Rennes\", \"Paris Saint-Germain FC\", 1, 0, 0, 1, 1, 3, 11, 4, 23, 7, 3, 0, 0], [\"Rennes\", \"RC Lens\", 1, 0, 1, 0, 1, 1, 10, 5, 10, 2, 2, 0, 0], [\"Rennes\", \"RC Strasbourg Alsace\", 2, 1, 0, 1, 2, 3, 27, 8, 18, 8, 7, 0, 0], [\"Rennes\", \"Stade Brestois 29\", 2, 0, 1, 1, 2, 3, 28, 13, 21, 4, 4, 0, 0], [\"Rennes\", \"Stade de Reims\", 1, 0, 0, 1, 1, 2, 13, 5, 11, 7, 1, 0, 0], [\"Rennes\", \"Toulouse FC\", 1, 0, 0, 1, 0, 2, 7, 1, 9, 2, 3, 0, 0]];\n",
        "        // Display the table\n",
        "        $(document).ready(function () {\n",
        "            window.dataTablePromise.then(() => {\n",
@@ -232,7 +232,7 @@
        "                dt_args[\"data\"] = data;\n",
        "\n",
        "                \n",
-       "                $('#005e07aa-1c49-4f9e-a0ab-3e7f558cbf26').DataTable(dt_args);\n",
+       "                $('#aeaf5b48-be38-44f1-8327-887fb38341ab').DataTable(dt_args);\n",
        "            });\n",
        "        })\n",
        "    }\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "}\n",
        "</style>\n",
        "<div class=\"itables\">\n",
-       "<table id=\"eeb7e34d-8810-4a47-bfac-475cf879858e\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
+       "<table id=\"def06589-a68a-4d8b-9770-28f22b05a26b\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      \n",
        "      <th>Player</th>\n",
@@ -350,7 +350,7 @@
        "                dt_args[\"data\"] = data;\n",
        "\n",
        "                \n",
-       "                $('#eeb7e34d-8810-4a47-bfac-475cf879858e').DataTable(dt_args);\n",
+       "                $('#def06589-a68a-4d8b-9770-28f22b05a26b').DataTable(dt_args);\n",
        "            });\n",
        "        })\n",
        "    }\n",
