--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -198,7 +198,7 @@
        "}\n",
        "</style>\n",
        "<div class=\"itables\">\n",
-       "<table id=\"aeaf5b48-be38-44f1-8327-887fb38341ab\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
+       "<table id=\"786c4ce6-df0c-4e0b-a03c-bb5e1eb857d2\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      \n",
        "      <th>Team</th>\n",
@@ -232,7 +232,7 @@
        "                dt_args[\"data\"] = data;\n",
        "\n",
        "                \n",
-       "                $('#aeaf5b48-be38-44f1-8327-887fb38341ab').DataTable(dt_args);\n",
+       "                $('#786c4ce6-df0c-4e0b-a03c-bb5e1eb857d2').DataTable(dt_args);\n",
        "            });\n",
        "        })\n",
        "    }\n",
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PLAYER = 'Amine Gouiri'"
+    "PLAYER = '''Djylian N'Guessan''' #'Amine Gouiri'"
    ]
   },
   {
@@ -316,7 +316,7 @@
        "}\n",
        "</style>\n",
        "<div class=\"itables\">\n",
-       "<table id=\"def06589-a68a-4d8b-9770-28f22b05a26b\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
+       "<table id=\"2c895f66-bbb3-4779-a58b-edbb9946d513\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      \n",
        "      <th>Player</th>\n",
@@ -341,7 +341,7 @@
        "    // to avoid conflicts between the various tables' data & dt_args\n",
        "    {\n",
        "        // Define the table data\n",
-       "        const data = [[\"Amine Gouiri\", \"Angers SCO\", 1, 1, 0, 0, 0, 0, 14, \"14.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"AS Monaco FC\", 1, 0, 0, 1, 0, 0, 46, \"46.00\", 2, 0, 0, 0, 0], [\"Amine Gouiri\", \"AS Saint-\\u00c9tienne\", 1, 1, 0, 0, 1, 0, 61, \"61.00\", 2, 1, 0, 0, 0], [\"Amine Gouiri\", \"Le Havre AC\", 1, 1, 0, 0, 0, 0, 21, \"21.00\", 1, 0, 0, 0, 0], [\"Amine Gouiri\", \"Montpellier HSC\", 1, 1, 0, 0, 0, 0, 23, \"23.00\", 1, 0, 0, 0, 0], [\"Amine Gouiri\", \"Olympique de Marseille\", 1, 0, 0, 1, 0, 0, 68, \"68.00\", 0, 0, 0, 0, 0], [\"Amine Gouiri\", \"Olympique Lyonnais\", 2, 2, 0, 0, 1, 2, 123, \"61.00\", 10, 6, 0, 0, 0], [\"Amine Gouiri\", \"RC Lens\", 1, 0, 1, 0, 0, 0, 23, \"23.00\", 1, 1, 0, 0, 0], [\"Amine Gouiri\", \"Stade Brestois 29\", 1, 0, 0, 1, 0, 1, 33, \"33.00\", 3, 3, 0, 0, 0], [\"Amine Gouiri\", \"Toulouse FC\", 1, 0, 0, 1, 0, 0, 90, \"90.00\", 2, 1, 1, 0, 0]];\n",
+       "        const data = [[\"Djylian N'Guessan\", \"FC Nantes\", 1, 0, 1, 0, 0, 0, 59, \"59.00\", 1, 0, 0, 0, 0], [\"Djylian N'Guessan\", \"Rennes\", 1, 0, 0, 1, 0, 0, 15, \"15.00\", 1, 0, 0, 0, 0], [\"Djylian N'Guessan\", \"Stade de Reims\", 1, 1, 0, 0, 0, 0, 1, \"1.00\", 0, 0, 0, 0, 0]];\n",
        "        // Display the table\n",
        "        $(document).ready(function () {\n",
        "            window.dataTablePromise.then(() => {\n",
@@ -350,7 +350,7 @@
        "                dt_args[\"data\"] = data;\n",
        "\n",
        "                \n",
-       "                $('#def06589-a68a-4d8b-9770-28f22b05a26b').DataTable(dt_args);\n",
+       "                $('#2c895f66-bbb3-4779-a58b-edbb9946d513').DataTable(dt_args);\n",
        "            });\n",
        "        })\n",
        "    }\n",
@@ -378,21 +378,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chps = ['all', 'ligue_1', 'la_liga', 'premier_league', 'serie_a', 'fussball_bundesliga']\n",
-    "seasons = [\"all\"] + [f\"{season}-{season+1}\" for season in range(datetime.now().year-5, datetime.now().year)]"
+    "chps = ['ligue_1', 'la_liga', 'premier_league', 'serie_a', 'fussball_bundesliga']\n",
+    "seasons = ['2024-2025'] #[f\"{season}-{season+1}\" for season in range(datetime.now().year-5, datetime.now().year)]\n",
+    "sides = ['home', 'away', 'both']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_matrix = players_oppositions.build_matrix('Matches', ID_COMP, SEASON)"
+    "# p_matrix = players_oppositions.build_matrix('Matches', ID_COMP, SEASON)"
    ]
   },
   {
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,15 +414,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e803c98c3f14539bf13a7cc8ad29d63",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='stat', options=('Matches', 'Wins', 'Draws', 'Loses', 'Goals For', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function ipywidgets.widgets.interaction._InteractFactory.__call__.<locals>.<lambda>(*args, **kwargs)>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "interact(\n",
     "    teams_oppositions.build_matrix, \n",
     "    stat=widgets.Dropdown(options=team_stats),\n",
     "    id_comp=widgets.Dropdown(options=chps), \n",
-    "    season=widgets.Dropdown(options=seasons)\n",
+    "    season=widgets.Dropdown(options=seasons),\n",
+    "    side=widgets.Dropdown(options=sides)\n",
     ")"
    ]
   },
@@ -434,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,15 +470,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "be62698dd2a14518b13ff971540a53e3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='stat', options=('Matches', 'Wins', 'Draws', 'Loses', 'Goals', 'Ass…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function ipywidgets.widgets.interaction._InteractFactory.__call__.<locals>.<lambda>(*args, **kwargs)>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "interact(\n",
     "    players_oppositions.build_matrix, \n",
     "    stat=widgets.Dropdown(options=player_stats),\n",
     "    id_comp=widgets.Dropdown(options=chps), \n",
-    "    season=widgets.Dropdown(options=seasons)\n",
+    "    season=widgets.Dropdown(options=seasons),\n",
+    "    side=widgets.Dropdown(options=sides)\n",
     ")"
    ]
   },
@@ -464,9 +517,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection to PostgreSQL closed.\n"
+     ]
+    }
+   ],
    "source": [
     "db.close()"
    ]
