--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -138,17 +138,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "teams_ranking = TeamsRanking(db)\n",
-    "t_ranking = teams_ranking.build_ranking(ID_COMP, [SEASON.replace('-', '_')], FIRST_WEEK, LAST_WEEK, SIDE, N, ROUND)"
+    "t_ranking = teams_ranking.build_ranking(ID_COMP, [\"2024_2025\", \"2023_2024\"], FIRST_WEEK, LAST_WEEK, SIDE, N, ROUND, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -177,9 +177,10 @@
        "}\n",
        "</style>\n",
        "<div class=\"itables\">\n",
-       "<table id=\"94c9b231-3aa9-430e-8cd3-c9776782c246\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
+       "<table id=\"ade084f4-c3ff-4a96-9828-5eb1fd49a611\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      \n",
+       "      <th>Ranking</th>\n",
        "      <th>Club</th>\n",
        "      <th>Attendance</th>\n",
        "      <th>Matches</th>\n",
@@ -202,37 +203,6 @@
        "      <th>Fouls</th>\n",
        "      <th>Shots</th>\n",
        "      <th>Shots on Target</th>\n",
-       "      <th>xP</th>\n",
-       "      <th>xP/Match</th>\n",
-       "      <th>Diff Points</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ranking</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead><tbody><tr><td>Loading... (need <a href=https://mwouts.github.io/itables/troubleshooting.html>help</a>?)</td></tr></tbody></table>\n",
        "<script>\n",
@@ -240,7 +210,7 @@
        "    // to avoid conflicts between the various tables' data & dt_args\n",
        "    {\n",
        "        // Define the table data\n",
-       "        const data = [[1, \"Paris Saint-Germain FC\", \"47225\", 23, 59, \"2.57\", 18, 5, 0, 62, 22, 40, 6, \"59.7\", \"2.60\", \"22.2\", \"0.97\", 26, 0, 0, 210, 417, 184, 52.44, 2.28, 6.56], [2, \"Olympique de Marseille\", \"63140\", 23, 46, \"2.00\", 14, 4, 5, 50, 29, 21, 4, \"43.9\", \"1.91\", \"31.8\", \"1.38\", 47, 6, 4, 265, 319, 127, 37.23, 1.62, 8.77], [3, \"OGC Nice\", \"24719\", 23, 43, \"1.87\", 12, 7, 4, 46, 27, 19, 6, \"41.0\", \"1.78\", \"26.6\", \"1.16\", 44, 3, 2, 262, 311, 119, 40.15, 1.75, 2.85], [4, \"AS Monaco FC\", \"9435\", 24, 43, \"1.79\", 13, 4, 7, 48, 31, 17, 7, \"54.4\", \"2.27\", \"27.4\", \"1.14\", 43, 3, 2, 327, 365, 132, 47.75, 1.99, -4.75], [5, \"Lille OSC\", \"40888\", 23, 41, \"1.78\", 11, 8, 4, 38, 23, 15, 8, \"39.5\", \"1.72\", \"30.7\", \"1.33\", 56, 1, 0, 284, 293, 109, 36.95, 1.61, 4.05], [6, \"Olympique Lyonnais\", \"51134\", 23, 36, \"1.57\", 10, 6, 7, 42, 30, 12, 8, \"39.5\", \"1.72\", \"33.2\", \"1.44\", 37, 0, 0, 260, 290, 118, 34.92, 1.52, 1.08], [7, \"RC Strasbourg Alsace\", \"19451\", 23, 34, \"1.48\", 9, 7, 7, 37, 32, 5, 6, \"34.2\", \"1.49\", \"38.7\", \"1.68\", 52, 0, 0, 268, 238, 100, 30.29, 1.32, 3.71], [8, \"RC Lens\", \"37911\", 23, 33, \"1.43\", 9, 6, 8, 26, 25, 1, 9, \"35.7\", \"1.55\", \"31.3\", \"1.36\", 62, 7, 3, 359, 324, 94, 35.39, 1.54, -2.39], [9, \"Stade Brestois 29\", \"14776\", 23, 33, \"1.43\", 10, 3, 10, 35, 38, -3, 6, \"30.7\", \"1.33\", \"39.7\", \"1.73\", 43, 1, 1, 287, 271, 106, 26.94, 1.17, 6.06], [10, \"Toulouse FC\", \"24711\", 23, 30, \"1.30\", 8, 6, 9, 27, 26, 1, 8, \"32.6\", \"1.42\", \"24.3\", \"1.06\", 35, 1, 0, 308, 268, 87, 38.37, 1.67, -8.37], [11, \"AJ Auxerre\", \"16440\", 23, 28, \"1.22\", 7, 7, 9, 34, 37, -3, 6, \"28.3\", \"1.23\", \"40.5\", \"1.76\", 44, 4, 1, 272, 254, 99, 24.92, 1.08, 3.08], [12, \"Angers SCO\", \"13267\", 23, 27, \"1.17\", 7, 6, 10, 26, 34, -8, 5, \"29.1\", \"1.27\", \"35.5\", \"1.54\", 30, 2, 0, 253, 226, 66, 27.34, 1.19, -0.34], [13, \"Rennes\", \"27361\", 23, 26, \"1.13\", 8, 2, 13, 30, 32, -2, 8, \"30.7\", \"1.33\", \"29.5\", \"1.28\", 51, 2, 0, 304, 280, 101, 32.17, 1.4, -6.17], [14, \"FC Nantes\", \"29627\", 23, 24, \"1.04\", 5, 9, 9, 28, 40, -12, 3, \"29.2\", \"1.27\", \"37.8\", \"1.64\", 48, 2, 0, 281, 246, 92, 27.82, 1.21, -3.82], [15, \"Stade de Reims\", \"15637\", 24, 22, \"0.92\", 5, 7, 12, 26, 38, -12, 3, \"26.4\", \"1.10\", \"42.4\", \"1.77\", 52, 5, 2, 281, 277, 79, 24.03, 1.0, -2.03], [16, \"AS Saint-\\u00c9tienne\", \"26437\", 23, 19, \"0.83\", 5, 4, 14, 23, 53, -30, 3, \"24.4\", \"1.06\", \"53.0\", \"2.30\", 45, 2, 0, 309, 231, 73, 19.88, 0.86, -0.88], [17, \"Le Havre AC\", \"20156\", 23, 17, \"0.74\", 5, 2, 16, 19, 47, -28, 3, \"24.4\", \"1.06\", \"40.7\", \"1.77\", 41, 4, 1, 256, 222, 61, 22.52, 0.98, -5.52], [18, \"Montpellier HSC\", \"13410\", 23, 15, \"0.65\", 4, 3, 16, 21, 54, -33, 0, \"26.8\", \"1.17\", \"45.2\", \"1.97\", 68, 6, 2, 285, 259, 83, 21.81, 0.95, -6.81]];\n",
+       "        const data = [[1, \"Paris Saint-Germain FC\", \"46969\", 57, 135, \"2.37\", 40, 15, 2, 143, 55, 88, 18, \"128.2\", \"2.25\", \"62.3\", \"1.09\", 77, 3, 1, 563, 921, 371], [2, \"AS Monaco FC\", \"8420\", 58, 110, \"1.90\", 33, 11, 14, 116, 73, 43, 19, \"109.8\", \"1.89\", \"70.7\", \"1.22\", 122, 11, 6, 808, 877, 334], [3, \"Lille OSC\", \"40263\", 57, 100, \"1.75\", 27, 19, 11, 90, 57, 33, 23, \"88.1\", \"1.55\", \"67.5\", \"1.18\", 123, 4, 1, 660, 731, 274], [4, \"OGC Nice\", \"24877\", 57, 98, \"1.72\", 27, 17, 13, 86, 56, 30, 23, \"91.0\", \"1.60\", \"62.4\", \"1.09\", 106, 7, 2, 664, 763, 268], [5, \"Olympique de Marseille\", \"61411\", 57, 96, \"1.68\", 27, 15, 15, 102, 70, 32, 11, \"98.8\", \"1.73\", \"67.2\", \"1.18\", 108, 11, 6, 639, 796, 279], [6, \"Stade Brestois 29\", \"14604\", 57, 94, \"1.65\", 27, 13, 17, 88, 72, 16, 21, \"78.8\", \"1.38\", \"78.8\", \"1.38\", 127, 6, 3, 701, 752, 271], [7, \"Olympique Lyonnais\", \"47470\", 57, 89, \"1.56\", 26, 11, 20, 91, 85, 6, 18, \"89.1\", \"1.56\", \"85.7\", \"1.50\", 94, 6, 1, 685, 729, 286], [8, \"RC Lens\", \"37856\", 57, 84, \"1.47\", 23, 15, 19, 71, 62, 9, 23, \"89.8\", \"1.58\", \"77.9\", \"1.37\", 140, 11, 4, 804, 811, 261], [9, \"Toulouse FC\", \"25400\", 57, 73, \"1.28\", 19, 16, 22, 69, 72, -3, 14, \"72.8\", \"1.28\", \"72.7\", \"1.28\", 112, 2, 1, 809, 663, 215], [10, \"RC Strasbourg Alsace\", \"23451\", 57, 73, \"1.28\", 19, 16, 22, 75, 82, -7, 11, \"76.2\", \"1.34\", \"84.2\", \"1.48\", 111, 2, 1, 730, 601, 219], [11, \"Rennes\", \"27551\", 57, 72, \"1.26\", 20, 12, 25, 83, 78, 5, 15, \"83.8\", \"1.47\", \"70.7\", \"1.24\", 117, 6, 0, 728, 756, 258], [12, \"Stade de Reims\", \"15687\", 58, 69, \"1.19\", 18, 15, 25, 68, 85, -17, 11, \"71.0\", \"1.22\", \"88.4\", \"1.52\", 122, 8, 4, 725, 688, 205], [13, \"FC Nantes\", \"29394\", 57, 57, \"1.00\", 14, 15, 28, 58, 95, -37, 11, \"66.5\", \"1.17\", \"90.6\", \"1.59\", 115, 5, 0, 729, 622, 221], [14, \"Montpellier HSC\", \"14247\", 57, 57, \"1.00\", 14, 15, 28, 64, 102, -38, 10, \"72.9\", \"1.28\", \"96.1\", \"1.69\", 136, 10, 2, 717, 696, 236], [15, \"Le Havre AC\", \"21266\", 57, 49, \"0.86\", 12, 13, 32, 53, 92, -39, 10, \"61.8\", \"1.08\", \"91.2\", \"1.60\", 108, 10, 4, 689, 603, 174], [16, \"FC Metz\", \"23838\", 34, 29, \"0.85\", 8, 5, 21, 35, 58, -23, 6, \"34.1\", \"1.00\", \"54.5\", \"1.60\", 54, 3, 0, 419, 326, 106], [16, \"FC Lorient\", \"15676\", 34, 29, \"0.85\", 7, 8, 19, 43, 66, -23, 4, \"37.1\", \"1.09\", \"54.1\", \"1.59\", 66, 1, 0, 403, 368, 135], [18, \"AJ Auxerre\", \"16440\", 23, 28, \"1.22\", 7, 7, 9, 34, 37, -3, 6, \"28.3\", \"1.23\", \"40.5\", \"1.76\", 44, 4, 1, 272, 254, 99], [19, \"Angers SCO\", \"13267\", 23, 27, \"1.17\", 7, 6, 10, 26, 34, -8, 5, \"29.1\", \"1.27\", \"35.5\", \"1.54\", 30, 2, 0, 253, 226, 66], [20, \"Clermont Foot\", \"9821\", 34, 25, \"0.74\", 5, 10, 19, 26, 60, -34, 5, \"36.0\", \"1.06\", \"63.6\", \"1.87\", 60, 7, 1, 396, 382, 120], [21, \"AS Saint-\\u00c9tienne\", \"26437\", 23, 19, \"0.83\", 5, 4, 14, 23, 53, -30, 3, \"24.4\", \"1.06\", \"53.0\", \"2.30\", 45, 2, 0, 309, 231, 73]];\n",
        "        // Display the table\n",
        "        $(document).ready(function () {\n",
        "            window.dataTablePromise.then(() => {\n",
@@ -249,7 +219,7 @@
        "                dt_args[\"data\"] = data;\n",
        "\n",
        "                \n",
-       "                $('#94c9b231-3aa9-430e-8cd3-c9776782c246').DataTable(dt_args);\n",
+       "                $('#ade084f4-c3ff-4a96-9828-5eb1fd49a611').DataTable(dt_args);\n",
        "            });\n",
        "        })\n",
        "    }\n",
