fix: reviewed players ranking

--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "teams_ranking = TeamsRanking(db)\n",
-    "t_ranking = teams_ranking.build_ranking(ID_COMP, [SEASON], FIRST_WEEK, LAST_WEEK, SIDE, N, ROUND, True)"
+    "t_ranking = teams_ranking.build_ranking(ID_COMP, [], FIRST_WEEK, LAST_WEEK, SIDE, N, ROUND, True)"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "outputs": [],
    "source": [
     "players_ranking = PlayersRanking(db)\n",
-    "p_ranking = players_ranking.build_ranking(ID_COMP, [\"2024_2025\", \"2023_2024\"], FIRST_WEEK, LAST_WEEK, SIDE)"
+    "p_ranking = players_ranking.build_ranking(ID_COMP, [SEASON], FIRST_WEEK, LAST_WEEK, SIDE)"
    ]
   },
   {
