feat: selected_matches function with filters on date. Reviewed teams ranking.

--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -32,8 +32,8 @@
     "from itables import init_notebook_mode, show\n",
     "\n",
     "from postgres.PostgresQuerying import PostgresQuerying\n",
-    "from src.rankings.TeamsRanking import TeamsRanking\n",
-    "from src.rankings.PlayersRanking import PlayersRanking\n",
+    "from src.rankings.teams_ranking import TeamsRanking\n",
+    "from src.rankings.players_ranking import PlayersRanking\n",
     "\n",
     "init_notebook_mode(all_interactive=True)"
    ]
@@ -65,6 +65,8 @@
     "SIDE: str = 'both'\n",
     "FIRST_WEEK: int = 1\n",
     "LAST_WEEK: int = 100\n",
+    "FIRST_DATE = '1970-01-01'\n",
+    "LAST_DATE = '2099-12-31'\n",
     "\n",
     "N: int = 1000000\n",
     "ROUND: int = 2"
@@ -84,7 +86,7 @@
    "outputs": [],
    "source": [
     "teams_ranking = TeamsRanking(db)\n",
-    "t_ranking = teams_ranking.build_ranking(ID_COMP, [], FIRST_WEEK, LAST_WEEK, SIDE, N, ROUND, True)"
+    "t_ranking = teams_ranking.build_ranking(\"uefa_champions_league\", [\"2024-2025\"], FIRST_WEEK, LAST_WEEK, FIRST_DATE, LAST_DATE, SIDE, N, ROUND, False)"
    ]
   },
   {
@@ -120,7 +122,7 @@
    "outputs": [],
    "source": [
     "players_ranking = PlayersRanking(db)\n",
-    "p_ranking = players_ranking.build_ranking(ID_COMP, [SEASON], FIRST_WEEK, LAST_WEEK, SIDE)"
+    "p_ranking = players_ranking.build_ranking([\"la_liga\", \"uefa_champions_league\"], [\"2024-2025\"], FIRST_WEEK, LAST_WEEK, FIRST_DATE, LAST_DATE, SIDE)"
    ]
   },
   {
@@ -139,6 +141,23 @@
    "outputs": [],
    "source": [
     "show(p_ranking[p_ranking['Player'] == 'Amine Gouiri'], paging=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il faut pour Mbappé (2023-2024 et 2024-2025)\n",
+    "\n",
+    "[PSG] ligue_1\n",
+    "\n",
+    "[PSG] uefa_champions_league\n",
+    "\n",
+    "[Real] la_liga\n",
+    "\n",
+    "[Real] uefa_champions_league\n",
+    "\n",
+    "[PSG, Real] uefa_champions_league"
    ]
   },
   {
