fix: optimized ranking queries.

--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "teams_ranking = TeamsRanking(db)\n",
-    "t_ranking = teams_ranking.build_ranking(\"uefa_champions_league\", [\"2024-2025\"], FIRST_WEEK, LAST_WEEK, FIRST_DATE, LAST_DATE, SIDE, N, ROUND, False)"
+    "t_ranking = teams_ranking.build_ranking(\"ligue_1\", [\"2024_2025\"], FIRST_WEEK, LAST_WEEK, FIRST_DATE, LAST_DATE, SIDE, N, ROUND, False)"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "outputs": [],
    "source": [
     "players_ranking = PlayersRanking(db)\n",
-    "p_ranking = players_ranking.build_ranking([\"la_liga\", \"uefa_champions_league\"], [\"2024-2025\"], FIRST_WEEK, LAST_WEEK, FIRST_DATE, LAST_DATE, SIDE)"
+    "p_ranking = players_ranking.build_ranking([\"uefa_champions_league\", \"la_liga\", \"ligue_1\"], [\"2023-2024\", \"2024-2025\"], FIRST_WEEK, LAST_WEEK, FIRST_DATE, LAST_DATE, SIDE)"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show(p_ranking.sort_values('Goals', ascending=False), paging=False)"
+    "# show(p_ranking.sort_values('Goals', ascending=False), paging=False)"
    ]
   },
   {
@@ -153,11 +153,17 @@
     "\n",
     "[PSG] uefa_champions_league\n",
     "\n",
+    "[PSG] ligue_1, uefa_champions_league\n",
+    "\n",
     "[Real] la_liga\n",
     "\n",
     "[Real] uefa_champions_league\n",
     "\n",
-    "[PSG, Real] uefa_champions_league"
+    "[Real] uefa_champions_league, la_liga\n",
+    "\n",
+    "[PSG, Real] uefa_champions_league\n",
+    "\n",
+    "[PSG, Real] uefa_champions_league, ligue_1, la_liga"
    ]
   },
   {
