--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "from itables import init_notebook_mode, show\n",
     "\n",
-    "from postgres.PostgresQuerying import PostgresQuerying\n",
+    "from postgres.postgres_querying import PostgresQuerying\n",
     "from src.rankings.teams_ranking import TeamsRanking\n",
     "from src.rankings.players_ranking import PlayersRanking\n",
     "\n",
@@ -122,7 +122,7 @@
    "outputs": [],
    "source": [
     "players_ranking = PlayersRanking(db)\n",
-    "p_ranking = players_ranking.build_ranking([\"uefa_champions_league\", \"la_liga\", \"ligue_1\"], [\"2023-2024\", \"2024-2025\"], FIRST_WEEK, LAST_WEEK, FIRST_DATE, LAST_DATE, SIDE)"
+    "p_ranking = players_ranking.build_ranking([], [\"2023-2024\", \"2024-2025\"], FIRST_WEEK, LAST_WEEK, FIRST_DATE, LAST_DATE, SIDE)"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# show(p_ranking.sort_values('Goals', ascending=False), paging=False)"
+    "show(p_ranking.sort_values('Goals', ascending=False), paging=False)"
    ]
   },
   {
@@ -141,29 +141,6 @@
    "outputs": [],
    "source": [
     "show(p_ranking[p_ranking['Player'] == 'Amine Gouiri'], paging=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Il faut pour Mbappé (2023-2024 et 2024-2025)\n",
-    "\n",
-    "[PSG] ligue_1\n",
-    "\n",
-    "[PSG] uefa_champions_league\n",
-    "\n",
-    "[PSG] ligue_1, uefa_champions_league\n",
-    "\n",
-    "[Real] la_liga\n",
-    "\n",
-    "[Real] uefa_champions_league\n",
-    "\n",
-    "[Real] uefa_champions_league, la_liga\n",
-    "\n",
-    "[PSG, Real] uefa_champions_league\n",
-    "\n",
-    "[PSG, Real] uefa_champions_league, ligue_1, la_liga"
    ]
   },
   {
